--- a/src/style/detail_page.scss
+++ b/src/style/detail_page.scss
@@ -618,6 +618,9 @@
 						li:hover img{
 							border: 1px solid #b4a078;
 						}
+						/*.active{
+							border: 1px solid #b4a078;
+						}*/
 					}
 				}
 			}
@@ -627,6 +630,56 @@
 				height: 600px;
 				background: yellowgreen;
 				margin-left: 60px;
+				h3{
+					margin-bottom: 7px;
+					font-size: 20px;
+					line-height: 20px;
+				}
+				h5{
+					width: 300px;
+					font-size: 12px;
+					padding-top: 13px;
+					line-height: 18px;
+					color: #999;
+					font-weight: 100;
+				}
+				.count_down{
+					padding: 0 10px 0 20px;
+					margin-top: 20px;
+					height: 36px;
+					line-height: 36px;
+					color: #fff;
+					background-color: #e36844;
+					h6{
+						font-weight: 100;
+						display: inline-block;
+						max-width: 180px;
+						font-size: 18px;
+						float: left;
+					}
+					.ready{
+						font-size: 14px;
+						margin-left: 14px;
+						float: left;
+						margin-top: -2px;
+					}
+					.clock{
+						float: left;
+						margin-top: -2px;
+						margin-left: 14px;
+						span{
+							text-align: center;
+						}
+					}
+				}
+				.particular{
+					width: 100%;
+					background: #f5f3ef;
+					p{
+						margin-bottom: 5px;
+						overflow: hidden;
+					}
+				}
 			}
 		}
 		.detail_box:after{
